# snap-website

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  build.sh  builder.hs  cabal.project  init-sandbox.sh  snap-website.cabal  www
blogdata/: config
blogdata/templates/: index.tpl  post.tpl
resources/: logo-4.xcf
snaplets/heist/templates/: about.tpl  docs.tpl  download.tpl  faq.md  index.tpl  page.tpl  quotes.tpl  snaplets.tpl  wrap.tpl
src/: Main.hs
staging/: snap-server-0.10.0.0-released.md
static/: bench-raw-results.txt
static/docs/heist/: Text-Templating-Heist.html  doc-index.html  heist.haddock  index-frames.html  index.html  mini_Text-Templating-Heist.html
static/docs/heist-hpc/: Text.Templating.Heist.Constants.hs.html  Text.Templating.Heist.Internal.hs.html  Text.Templating.Heist.Splices.Apply.hs.html  Text.Templating.Heist.Splices.Bind.hs.html  Text.Templating.Heist.Splices.Cache.hs.html  Text.Templating.Heist.Splices.Html.hs.html  Text.Templating.Heist.Splices.Ignore.hs.html  Text.Templating.Heist.Splices.Markdown.hs.html  Text.Templating.Heist.Splices.Static.hs.html  Text.Templating.Heist.Splices.hs.html  Text.Templating.Heist.Tests.hs.html  Text.Templating.Heist.Types.hs.html  Text.Templating.Heist.hs.html  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
static/docs/snap-core/: Data-CIByteString.html  Snap-Internal-Debug.html  Snap-Internal-Http-Types.html  Snap-Internal-Iteratee-Debug.html  Snap-Iteratee.html  Snap-Types.html  Snap-Util-FileServe.html  Snap-Util-GZip.html  doc-index-62.html  doc-index-95.html  doc-index-A.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-W.html  doc-index.html  index-frames.html  index.html  mini_Data-CIByteString.html  mini_Snap-Internal-Debug.html  mini_Snap-Internal-Http-Types.html  mini_Snap-Iteratee.html  mini_Snap-Types.html  mini_Snap-Util-FileServe.html  snap-core.haddock
static/docs/snap-core-hpc/: Snap.Internal.Http.Types.hs.html  Snap.Internal.Instances.hs.html  Snap.Internal.Iteratee.BoyerMooreHorspool.hs.html  Snap.Internal.Iteratee.Debug.hs.html  Snap.Internal.Iteratee.KnuthMorrisPratt.hs.html  Snap.Internal.Parsing.hs.html  Snap.Internal.Routing.hs.html  Snap.Internal.Types.hs.html  Snap.Iteratee.hs.html  Snap.Types.hs.html  Snap.Util.FileServe.hs.html  Snap.Util.FileUploads.Tests.hs.html  Snap.Util.FileUploads.hs.html  Snap.Util.GZip.hs.html  Snap.Util.Readable.hs.html  hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
static/docs/snap-server-hpc/: Data.Concurrent.HashMap.Internal.hs.html  Data.Concurrent.HashMap.Tests.hs.html  Data.Concurrent.HashMap.hs.html  Data.HashMap.Concurrent.Tests.hs.html  Data.HashMap.Concurrent.hs.html  Paths_snap_server.hs.html  Snap.Http.Server.Config.hs.html  Snap.Http.Server.hs.html  Snap.Internal.Http.Parser.hs.html  Snap.Internal.Http.Server.Backend.hs.html  Snap.Internal.Http.Server.Date.hs.html  Snap.Internal.Http.Server.GnuTLS.hs.html  Snap.Internal.Http.Server.HttpPort.hs.html  Snap.Internal.Http.Server.LibevBackend.hs.html  Snap.Internal.Http.Server.ListenHelpers.hs.html  Snap.Internal.Http.Server.SimpleBackend.hs.html  Snap.Internal.Http.Server.TimeoutManager.Tests.hs.html  Snap.Internal.Http.Server.TimeoutManager.hs.html  (+7 more)
templates/: about.tpl  benchmarks.md  benchmarks.tpl  contribute.tpl  docs.tpl  download.tpl  faq.md  faq.tpl  index.tpl  nav.tpl  news.tpl  page-head.tpl  page.tpl  quickstart.tpl  snaplets.tpl  style-guide.md  style-guide.tpl  wrap.tpl
templates/docs/: quickstart.md  quickstart.tpl  style-guide.tpl
templates/tutorials/: heist.md  heist.tpl  snap-api.md  snap-api.tpl
w1/: index.html
w2/: build.sh  builder.hs  env.conf  index.html
w2/site/: index.html
w2/src/: index.html
www/: index.html
(+571 files in other folders)
