Name:                snap-website
Version:             0.3
Synopsis:            The Snap Framework Website
Homepage:            http://snapframework.com
License:             BSD3
License-file:        LICENSE
Author:              James Sanders, Gregory Collins, Doug Beardsley
Maintainer:          snap@snapframework.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snap-website
  hs-source-dirs: src
  main-is: Main.hs
  
  Build-depends:
    base >= 4 && < 5,
    bytestring,
    containers,
    data-lens-template >= 2.1 && < 2.2,
    directory,
    filepath,
    heist >= 0.6 && < 0.7,
    MonadCatchIO-transformers >= 0.2 && < 0.3,
    mtl >= 2 && <3,
    process,
    snap >= 0.6 && <0.7,
    snap-core >= 0.6 && <0.7,
    snap-server >= 0.6 && <0.7,
    snap-static-pages >= 0.1 && <1.0,
    text,
    time,
    transformers,
    unix,
    utf8-string,
    xhtml-combinators >= 0.2.2 && < 0.3,
    xmlhtml ==0.1.*

  ghc-prof-options: -prof -auto-all
  
  if impl(ghc >= 6.12.0)
    ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields
                 -threaded -fno-warn-unused-do-bind
  else
    ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields
                 -threaded
  
  Extensions: OverloadedStrings

