Name:                snap-website
Version:             0.10
Synopsis:            The Snap Framework Website
Homepage:            http://snapframework.com
License:             BSD3
License-file:        LICENSE
Author:              James Sanders, Gregory Collins, Doug Beardsley
Maintainer:          snap@snapframework.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Executable snap-website
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    blaze-html,
    bytestring,
    containers,
    directory,
    filepath,
    heist >= 1.0 && < 1.1,
    lens,
    lifted-base >= 0.2 && < 0.3,
    map-syntax >= 0.1 && < 0.3,
    mtl >= 2 && <3,
    process,
    snap        >= 1.0 && <1.1,
    snap-core   >= 1.0 && <1.1,
    snap-blaze  >= 0.2.1 && <0.3,
    snap-server >= 1.0 && <1.1,
    snap-static-pages >= 1.0 && < 1.1,
    text,
    time,
    transformers,
    utf8-string,
    xmlhtml >= 0.1 && < 0.3

  ghc-prof-options: -prof -auto-all

  if impl(ghc >= 6.12.0)
    ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields
                 -threaded -fno-warn-unused-do-bind -rtsopts
  else
    ghc-options: -O2 -Wall -fwarn-tabs -funbox-strict-fields
                 -threaded -rtsopts

  Extensions: OverloadedStrings
